kernel/tests/snapshots/runtime_cli_snapshots/add_paper_targets__config_missing_repo_path.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "message": "config.repo_path must be a non-empty string in [KERNEL]/tests/fixtures/add_targets/bad_config.json",
  "status": "error"
}
