kernel/tests/snapshots/runtime_cli_snapshots/add_paper_targets__missing_config.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "message": "failed to resolve config path /nonexistent/trellis-add-targets/trellis.config.json: No such file or directory (os error 2)",
  "status": "error"
}
